# StandardizeWeather

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
seeds/: aliases.json
src/standardize_weather/: cli.py  ingest.py  reconcile.py  stations.py
src/weather_truth/: db.py  ingest.py  schema.py  units.py
src/weather_truth/feeds/: http.py  noaa.py  openweather.py
src/weather_truth/normalize/: noaa.py  openweather.py
tests/: test_cli.py  test_db.py  test_http.py  test_http_redaction.py  test_ingest.py  test_ingest_openweather.py  test_noaa_mapper.py  test_openweather_mapper.py  test_reconcile.py  test_schema.py  test_stations.py  test_units.py
tests/fixtures/: noaa_kboi.json  openweather_kboi.json
